# s3-guard

./: DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
s3_guard/: auditor.py  cli.py
scripts/: seed_buckets.py
terraform/: buckets.tf  main.tf  outputs.tf  variables.tf
webinar-s3-guard/: .gitignore  LICENSE
webinar-s3-guard/docs/: DEMO_RUNBOOK.md  PRESENTATION_SCRIPT.md
webinar-s3-guard/s3_guard/: __init__.py  checks.py
webinar-s3-guard/slides/: build_deck.js  webinar-user-to-creator.pptx
webinar-s3-guard/tests/: test_auditor.py
