[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-guard"
version = "0.1.0"
description = "A tiny open-source S3 bucket security auditor — flags public access, missing encryption, no versioning, and no logging."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Olamide Kosile" }]
keywords = ["aws", "s3", "security", "audit", "cli", "devops", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "boto3>=1.34",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
]

[project.urls]
Homepage = "https://github.com/Mide69/s3-guard"
Issues = "https://github.com/Mide69/s3-guard/issues"

[project.scripts]
s3-guard = "s3_guard.cli:main"

[tool.setuptools.packages.find]
include = ["s3_guard*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
